--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,15 @@
 /dotnet/RhinoCommon.pidb
 
 /examples/buildwikisamples/bin
+/examples/buildwikisamples/obj
+/examples/buildwikisamples/buildwikisamples.sln
+/examples/buildwikisamples/buildwikisamples.suo
+
+/examples/cs/bin
+/examples/cs/obj
+/examples/vbnet/bin
+/examples/vbnet/obj
+
 /webhelp.txt
 /MethodGen.exe
 /methodgen/bin/Release/MethodGen.exe
