--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,4 @@ nuget/nupkg_x86/*.nupkg
 nuget/nupkg_x64/lib/net40/*.dll
 nuget/nupkg_x64/NativeBinaries/x64/*.dll
 nuget/nupkg_x64/*.nupkg
+rh3dmio_native_out
