--- a/dotnet/Rhino3dmIO.csproj
+++ b/dotnet/Rhino3dmIO.csproj
@@ -65,7 +65,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;OPENNURBS_SDK</DefineConstants>
+    <DefineConstants>TRACE;OPENNURBS_SDK;MULTIARCH</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
