--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -163,10 +163,14 @@
     <Compile Include="ex_objectdecoration.cs" />
     <Compile Include="ex_objectdisplaymode.cs" />
     <Compile Include="ex_objectlayer.cs" />
+    <Compile Include="ex_objectname.cs" />
     <Compile Include="ex_orientonsrf.cs" />
     <Compile Include="ex_pickobjects.cs" />
     <Compile Include="ex_planesurface.cs" />
     <Compile Include="ex_pointatcursor.cs" />
+    <Compile Include="ex_principalcurvature.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="ex_printinstancedefinitions.cs" />
     <Compile Include="ex_printinstancedefinitiontree.cs" />
     <Compile Include="ex_projectpointstobreps.cs" />
