--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -158,10 +158,12 @@
     <Compile Include="ex_objectdecoration.vb" />
     <Compile Include="ex_objectdisplaymode.vb" />
     <Compile Include="ex_objectlayer.vb" />
+    <Compile Include="ex_objectname.vb" />
     <Compile Include="ex_orientonsrf.vb" />
     <Compile Include="ex_pickobjects.vb" />
     <Compile Include="ex_planesurface.vb" />
     <Compile Include="ex_pointatcursor.vb" />
+    <Compile Include="ex_principalcurvature.vb" />
     <Compile Include="ex_printinstancedefinitions.vb" />
     <Compile Include="ex_printinstancedefinitiontree.vb" />
     <Compile Include="ex_projectpointstobreps.vb" />
