samples, tweaks, <example> tags

--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -133,6 +133,7 @@
     <Compile Include="ex_elevation.cs" />
     <Compile Include="ex_evnormal.cs" />
     <Compile Include="ex_explodehatch.cs" />
+    <Compile Include="ex_extendsurface.cs" />
     <Compile Include="ex_extractthumbnail.cs" />
     <Compile Include="ex_extractrendermesh.cs" />
     <Compile Include="ex_extrudebrepface.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="ex_printinstancedefinitiontree.cs" />
     <Compile Include="ex_projectpointstobreps.cs" />
     <Compile Include="ex_renameblock.cs" />
+    <Compile Include="ex_rhinogettransform.cs" />
     <Compile Include="ex_sellayer.cs" />
     <Compile Include="ex_showsurfacedirection.cs" />
     <Compile Include="ex_spritedrawing.cs" />
