RhinoCommon sample: modifylightcolor

--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -160,6 +160,7 @@
     <Compile Include="ex_loft.cs" />
     <Compile Include="ex_meshdrawing.cs" />
     <Compile Include="ex_meshvolume.cs" />
+    <Compile Include="ex_modifylightcolor.cs" />
     <Compile Include="ex_movecplane.cs" />
     <Compile Include="ex_movegripobjects.cs" />
     <Compile Include="ex_nestedblock.cs" />
