RhinoCommon sample: replacehatchpattern

--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -185,6 +185,7 @@
     <Compile Include="ex_printinstancedefinitiontree.cs" />
     <Compile Include="ex_projectpointstobreps.cs" />
     <Compile Include="ex_renameblock.cs" />
+    <Compile Include="ex_replacehatchpattern.cs" />
     <Compile Include="ex_rhinogettransform.cs" />
     <Compile Include="ex_screencaptureview.cs" />
     <Compile Include="ex_sellayer.cs" />
