--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -134,6 +134,8 @@
     <Compile Include="ex_dividebylength.vb" />
     <Compile Include="ex_dividebysegments.vb" />
     <Compile Include="ex_dividecurvestraight.vb" />
+    <Compile Include="ex_dotnetmovepointobjects.vb" />
+    <Compile Include="ex_dotnetmovepointobjectsnonuniform.vb" />
     <Compile Include="ex_drawoverlay.vb" />
     <Compile Include="ex_dupborder.vb" />
     <Compile Include="ex_dupmeshboundary.vb" />
