--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -176,11 +176,13 @@
     <Compile Include="ex_objectcolor.cs" />
     <Compile Include="ex_objectdecoration.cs" />
     <Compile Include="ex_objectdisplaymode.cs" />
+    <Compile Include="ex_objectiterator.cs" />
     <Compile Include="ex_objectlayer.cs" />
     <Compile Include="ex_objectname.cs" />
     <Compile Include="ex_orientonsrf.cs" />
     <Compile Include="ex_ortho.cs" />
     <Compile Include="ex_pickobjects.cs" />
+    <Compile Include="ex_pickpoint.cs" />
     <Compile Include="ex_planesurface.cs" />
     <Compile Include="ex_pointatcursor.cs" />
     <Compile Include="ex_principalcurvature.cs">
