--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -131,18 +131,21 @@
     <Compile Include="ex_customundo.vb" />
     <Compile Include="ex_deleteblock.vb" />
     <Compile Include="ex_dimstyle.vb" />
+    <Compile Include="ex_displayprecision.vb" />
     <Compile Include="ex_dividebylength.vb" />
     <Compile Include="ex_dividebysegments.vb" />
     <Compile Include="ex_dividecurvestraight.vb" />
     <Compile Include="ex_dotnetmovepointobjects.vb" />
     <Compile Include="ex_dotnetmovepointobjectsnonuniform.vb" />
     <Compile Include="ex_drawoverlay.vb" />
+    <Compile Include="ex_drawstring.vb" />
     <Compile Include="ex_dupborder.vb" />
     <Compile Include="ex_dupmeshboundary.vb" />
     <Compile Include="ex_edittext.vb" />
     <Compile Include="ex_elevation.vb" />
     <Compile Include="ex_evnormal.vb" />
     <Compile Include="ex_explodehatch.vb" />
+    <Compile Include="ex_extendcurve.vb" />
     <Compile Include="ex_extendsurface.vb" />
     <Compile Include="ex_extractisocurve.vb" />
     <Compile Include="ex_extractthumbnail.vb" />
@@ -165,9 +168,11 @@
     <Compile Include="ex_leader.vb" />
     <Compile Include="ex_locklayer.vb" />
     <Compile Include="ex_loft.vb" />
+    <Compile Include="ex_makerhinocontours.vb" />
     <Compile Include="ex_meshdrawing.vb" />
     <Compile Include="ex_meshvolume.vb" />
     <Compile Include="ex_modifylightcolor.vb" />
+    <Compile Include="ex_modifyobjectcolor.vb" />
     <Compile Include="ex_movecplane.vb" />
     <Compile Include="ex_moveobjectstocurrentlayer.vb" />
     <Compile Include="ex_objectdecoration.vb" />
