--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -140,7 +140,9 @@
     <Compile Include="ex_drawoverlay.vb" />
     <Compile Include="ex_drawstring.vb" />
     <Compile Include="ex_dupborder.vb" />
+    <Compile Include="ex_duplicateobject.vb" />
     <Compile Include="ex_dupmeshboundary.vb" />
+    <Compile Include="ex_edgesrf.vb" />
     <Compile Include="ex_edittext.vb" />
     <Compile Include="ex_elevation.vb" />
     <Compile Include="ex_evnormal.vb" />
@@ -151,6 +153,7 @@
     <Compile Include="ex_extractthumbnail.vb" />
     <Compile Include="ex_findobjectsbyname.vb" />
     <Compile Include="ex_constrainedcopy.vb" />
+    <Compile Include="ex_getangle.vb" />
     <Compile Include="ex_getmultiplewithoptions.vb" />
     <Compile Include="ex_getpointdynamicdraw.vb" />
     <Compile Include="ex_gettext.vb" />
@@ -192,6 +195,8 @@
     <Compile Include="ex_projectpointstobreps.vb" />
     <Compile Include="ex_renameblock.vb" />
     <Compile Include="ex_renamelayer.vb" />
+    <Compile Include="ex_reparameterizecrv.vb" />
+    <Compile Include="ex_replacecolordialog.vb" />
     <Compile Include="ex_replacehatchpattern.vb" />
     <Compile Include="ex_rhinogettransform.vb" />
     <Compile Include="ex_screencaptureview.vb" />
