--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -174,6 +174,7 @@
     <Compile Include="ex_locklayer.cs" />
     <Compile Include="ex_loft.cs" />
     <Compile Include="ex_makerhinocontours.cs" />
+    <Compile Include="ex_maximizeview.cs" />
     <Compile Include="ex_meshdrawing.cs" />
     <Compile Include="ex_meshvolume.cs" />
     <Compile Include="ex_modifylightcolor.cs" />
@@ -188,6 +189,7 @@
     <Compile Include="ex_objectiterator.cs" />
     <Compile Include="ex_objectlayer.cs" />
     <Compile Include="ex_objectname.cs" />
+    <Compile Include="ex_offsetcurve.cs" />
     <Compile Include="ex_orientonsrf.cs" />
     <Compile Include="ex_ortho.cs" />
     <Compile Include="ex_pickobjects.cs" />
